[metadata]
name = security-watchtower
version = 2.1.0
description = Centralized Security Monitoring System
long_description = file: README.md
license = MIT
keywords = security monitoring bugbounty

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    mysql-connector-python
    discord-webhook
    beautifulsoup4
    rich
    colorama
